--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,11 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-hateoas')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation 'org.mariadb.jdbc:mariadb-java-client:2.3.0'
+    implementation 'mysql:mysql-connector-java:8.0.13'
     //implementation 'org.flywaydb:flyway-core'
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE'
     runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.13'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
