--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
+
+bootRun {
+    System.properties.put("user.timezone", "GMT")
+    systemProperties = System.properties
+}
