Adds sending mails when a boss goes to on window for first time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.datasource.initialization-mode=always
 logging.file=./logging/logs.out
 logging.level.root=DEBUG
 logging.level.sql=TRACE
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=inquisitionAlliance@gmail.com
+spring.mail.password=weareally123!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
