Adds mailing when a new items is added on the uaction
Fixes for upload photos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.initialization-mode=always
 logging.file=./logging/logs.out
 logging.level.root=DEBUG
 logging.level.sql=TRACE
+photo.upload.path=../ClassicProjectFrontEnd/src/assets/upload/photos/
 
 
 spring.mail.host=smtp.gmail.com
