--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
+    compile 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.springframework.boot:spring-boot-starter-mail'
     //implementation 'org.flywaydb:flyway-core'
