fixes tomcat version

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext {
+        tomcat.version = '8.5.34'
         springBootVersion = '2.1.2.RELEASE'
     }
     repositories {
@@ -29,6 +30,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-hateoas')
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.0.7.RELEASE'
     implementation 'mysql:mysql-connector-java:8.0.13'
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
