Updates spring boot

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.2.RELEASE'
-        tomcat = '8.5.34'
+        springBootVersion = '2.1.5.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -30,16 +29,16 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-hateoas')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.0.7.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'mysql:mysql-connector-java:8.0.13'
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
     compile 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
-    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    //compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.springframework.boot:spring-boot-starter-mail'
     //implementation 'org.flywaydb:flyway-core'
-    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE'
+    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.5.RELEASE'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java:8.0.13'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
