Adds discord bot

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -31,6 +32,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'mysql:mysql-connector-java:8.0.13'
+    compile 'net.dv8tion:JDA:4.0.0_50'
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
