--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,5 @@ fabric.properties
 src/test/test.iml
 build/*
 logging/*
-src/main/resources/*
+src/main/resources/application.properties
+src/main/resources/credentials.json
