Fixes type on package name

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,4 @@ fabric.properties
 src/test/test.iml
 build/*
 logging/*
-src/main/resources/application.properties
-src/main/resources/credentials.json
+src/main/resources/*
